--- a/frontend/Giveaways.html
+++ b/frontend/Giveaways.html
@@ -42,7 +42,7 @@
               <div class="couleur ">
               </div>
               <a href="bot_management.html" class="nav-text centrer panel p-2">
-                <i class="fa-solid fa-list-check"></i> Accounts
+                <i class="fa-solid fa-dashboard"></i> Accounts
               </a>
             </div>
           </div>
